# pathtracer

./: .gitignore  CMakeLists.txt  README.md
scripts/: run_cpu.sh  run_hip.sh  run_mpi.sh
src/core/: camera.h  color.h  hittable.h  hittable_list.h  material.h  metrics.h  path_tracer.h  ray.h  rect.h  scene_cornell.h  sphere.h  vec3.h
src/cpu/: main_cpu.cpp
src/gpu/: hip_kernels.hip.cpp  main_hip.cpp
src/gui/: main_gui_sdl.cpp
src/mpi/: main_mpi_cpu.cpp
